ACT5_Measure 중간 작성

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.ACT1_Splash"></activity>
+        <activity android:name=".activity.ACT1_Splash" />
+        <activity android:name=".activity.ACT5_Measure"></activity>
     </application>
 
 </manifest>
