--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name="._example.ExampleActivity" />
         <activity android:name=".controller.TestController">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,7 +17,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
         <activity android:name=".activity.ACT1_Splash"></activity>
+        <activity android:name=".activity.ACT2_Register"></activity>
+        <activity android:name=".activity.ACT3_Login"></activity>
+        <activity android:name=".activity.ACT5_Measure"></activity>
     </application>
 
 </manifest>
