1. act9_layout 제작

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         <activity android:name=".activity.ACT3_Login" />
         <activity android:name=".activity.ACT5_Measure" />
         <activity android:name=".util.PhotoProcess" />
-        <activity android:name=".activity.ACT7_Focus"></activity>
+        <activity android:name=".activity.ACT7_Focus" />
+        <activity android:name=".activity.ACT9_Course"></activity>
     </application>
 
 </manifest>
