--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".activity.ACT3_Login" />
         <activity android:name=".activity.ACT5_Measure" />
         <activity android:name=".util.PhotoProcess" />
+        <activity android:name=".activity.ACT7_Focus"></activity>
     </application>
 
 </manifest>
