--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-
-        <activity android:name=".controller.TestController">
+        <activity android:name=".controller.TestController" />
+        <activity android:name=".controller.StartController">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
