--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@drawable/app"
+        android:label="MVP"
+        android:roundIcon="@drawable/app"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
         <!--테스트를 위한 컨트롤러-->
